--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -1488,107 +1488,107 @@ stories:
   domain: http://www.hidesertstar.com/
   link: http://www.hidesertstar.com/image_8590ae70-2901-11ea-a0c6-d7eccb22ae6c.html
 images:
-- name: castle-wall-DSC-0067-emily-carr.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-emily-carr.JPG
-- name: bf-skinner-old-house_36681740046_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-old-house_36681740046_o.jpg
-- name: ellis-island-ellis-island-room-spagetti-accident.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellis-island-room-spagetti-accident.jpg
-- name: christianity-christianity-under-construction-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-granite.jpg
-- name: downtheline-downtheline-cinnamon-rolls.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-cinnamon-rolls.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-gan-vogh.jpg
-- name: bf-skinner-cruise-ship-shore-log.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-cruise-ship-shore-log.jpg
-- name: powerlines-power-dali-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/powerlines-power-dali-two.jpg
-- name: bf-skinner-nyc-skyline-from-ferry.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-nyc-skyline-from-ferry.jpg
-- name: gears-4882162452-fa3126b38d-b-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-purple-pond.jpg
-- name: pigeons-on-the-ledge-pigeons-on-ledge-creativity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-creativity.jpg
-- name: braceros-domingo-ulloa-san-francisco-from-salesforce-west.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-san-francisco-from-salesforce-west.jpg
-- name: stories-35910978054-906047b6cb-z.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-35910978054-906047b6cb-z.jpg
-- name: catacombs-catacombs-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-atari-asteroids.jpg
-- name: copper-circuit-docs-cranes-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-docs-cranes-waterfront.jpg
-- name: san-francisco-skyline-night-san-francisco-skyline-night.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night.jpg
-- name: oldhouse-granaryfield-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-clean-view.jpg
-- name: oldhouse-granaryfield-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-bright-sand.jpg
-- name: bluelake-colorful-dream-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-dream-file-00-00-00-00.jpg
-- name: soldier-kneeling-26304845730-d4e495e25f-o-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-kandinsky-bv.jpg
-- name: bf-skinner-frosty-downtown-lights.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-frosty-downtown-lights.jpg
-- name: nyc-flag-nycflag-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-plentiful.jpg
-- name: windowmountain-window-mountain-marcel-duchamp.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-marcel-duchamp.jpg
-- name: stories-new-80-87-800-500-0-max-0--1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-80-87-800-500-0-max-0--1--1.jpg
-- name: old-church-oldchurch-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-atari-asteroids.jpg
-- name: server-cloud-server-racks-door-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-far-away.jpg
-- name: aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-redes-fast-flux-623x425-blue-electricity.jpg
-- name: nazi-invasion-adam-smith-edinburgh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-adam-smith-edinburgh.jpg
-- name: power-lines-power-lines-empty-space-blue-circuit-4.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-blue-circuit-4.jpg
-- name: la-muse-city-waterfront-path.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-city-waterfront-path.jpg
-- name: castle-on-hill-castle-on-hill-edinburgh.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh.JPG
-- name: braceros-domingo-ulloa-pigeons-do-not-feed-them.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/braceros-domingo-ulloa-pigeons-do-not-feed-them.jpg
-- name: walled-garden-walled-garden-yellow-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-yellow-paper.jpg
-- name: copper-circuit-dragon-desert-looking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-dragon-desert-looking.jpg
-- name: old-cabin-oldcabin-blue-granite.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-granite.jpg
-- name: oldtrain-oldtrain-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-gan-vogh.jpg
-- name: power-lines-power-lines-empty-space-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-alien-goggles.jpg
-- name: old-granary-field-oldhouse-crunch-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-crunch-paper.jpg
-- name: trucksilo-trucksilo-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/trucksilo-trucksilo-really-hot.jpg
-- name: old-cabin-oldcabin-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-sand-paper.jpg
-- name: birdhouse-birdhouse-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-ww2-color.jpg
-- name: stories-status-berlin-propaganda-leaflets.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-status-berlin-propaganda-leaflets.jpg
-- name: stories-mosaic-face-blue-circuit-3.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-mosaic-face-blue-circuit-3.jpg
-- name: san-francisco-city-bridge-sf-city-bridge-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-atari-asteroids.jpg
-- name: cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-green-zuma.jpg
-- name: copper-circuit-blechlety-old-racks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-blechlety-old-racks.jpg
-- name: copper-circuit-train-coming-up-tracks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-train-coming-up-tracks.jpg
-- name: downtheline-downtheline-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-colorful-blocks.jpg
-- name: amusement-park-amusement-park-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2.jpg
-- name: birdhouse-birdhouse-bright-sand.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-bright-sand.jpg
-- name: ellis-island-ellisisland-far-away.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-far-away.jpg
+- name: store-on-corner-oldcabin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-internet-numbers.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-electricity.jpg
+- name: catacombs-catacombs-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-gan-vogh.jpg
+- name: status-berlin-status-berlin-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-green-zuma.jpg
+- name: docks-docks-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-oily-mcoilface.jpg
+- name: locked-up-steam-lock-up-steam-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-free-woman.jpg
+- name: capital-battle-capitolbattle-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-far-away.jpg
+- name: art-museum-art-museum-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-atari-missle.jpg
+- name: power-lines-power-lines-empty-space-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kand-two.jpg
+- name: copper-circuit-working-waterfront-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-working-waterfront-2.jpg
+- name: stories-new-31-156-800-500-0-max-0--1--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-31-156-800-500-0-max-0--1--1.jpg
+- name: la-muse-hotel-down-sidewalk.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-hotel-down-sidewalk.jpg
+- name: oldhouse-oldhouse-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-green-zuma.jpg
+- name: adam-smith-adam-smith-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-gred-mash.jpg
+- name: miamibeach-miamibeach-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-mucha-mult.jpg
+- name: eduardo-eduardo-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-sunday.jpg
+- name: curtain-curtain-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-satan-red.jpg
+- name: old-cabin-oldcabin-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-internet-numbers.jpg
+- name: bf-skinner-desktop-laptop-chair.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-desktop-laptop-chair.jpg
+- name: white-house-lawn-white-house-lawn-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-oily-mcoilface.jpg
+- name: old-house-oldhouse-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-blue-circuit.jpg
+- name: stalin-time-train-tracks-bending.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-tracks-bending.jpg
+- name: old-granary-field-oldhouse-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-sand-paper.jpg
+- name: aws-s3-stories-fence-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-fence-crabapple.jpg
+- name: lincoln-memorial-lincolnmemorial-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-attack-planes.jpg
+- name: liberty-back-statue-liberty-back-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-smoking-cigarette.jpg
+- name: white-house-lawn-white-house-window-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-green-zuma.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-alberto-giacometti.png
+- name: stalin-time-san-francisco-lights-skyline.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-san-francisco-lights-skyline.jpg
+- name: old-door-lock-old-door-lock-spagetti-accident.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-spagetti-accident.jpg
+- name: san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-free-woman.jpg
+- name: oldhouse-granaryfield-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-purple-storm.jpg
+- name: christianity-christianity-under-construction-wols.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-wols.jpg
+- name: bluelake-crunch-paper-file-00-01-17-38.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-01-17-38.jpg
+- name: old-school-house-old-schoolhouse-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-school-house-old-schoolhouse-alien-goggles.jpg
+- name: adam-smith-adam-smith-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/adam-smith-adam-smith-dali-two.jpg
+- name: walled-garden-walled-garden-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-sunday.jpg
+- name: rockingchair-rockingchair-purple-storm.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purple-storm.jpg
+- name: border-crossing-bordercrossing-purp-paper.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-purp-paper.png
+- name: old-cabin-oldcabin-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-blue-circuit.jpg
+- name: old-cabin-oldcabin-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-cabin-oldcabin-oily-mcoilface.jpg
+- name: old-house-oldhouse-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-nazi-poster.jpg
+- name: bluelake-blue-brush-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-blue-brush-file-00-00-00-00.jpg
+- name: subway-subway-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-rainbow-festival.jpg
+- name: capital-battle-capitolbattle-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-clean-view.jpg
+- name: old-granary-field-oldhouse-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-space-pizza.jpg
+- name: nyc-flag-nycflag-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nyc-flag-nycflag-sunday.jpg
+- name: san-francisco-street-view-san-francisco-street-view-atari-missle.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-atari-missle.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-neo-instinct.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-attack-planes.jpg
+- name: birdhouse-birdhouse-rainbow-festival.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-rainbow-festival.jpg
 ---
 Caring Is Their Calling.&nbsp;Ukraine, Eastern Rebels Swap Prisoners In Move To End War.&nbsp;Hospitality Veterans Opening Joia Beach On Watson Island.&nbsp;Musicians Invited To Audition For ProMusica Arizona Chorale And Orchestra.&nbsp;Glenna Marie McDaniels Carpenter.&nbsp;Timo Meiers Hat Trick Leads Sharks Past Philadelphia Flyers.&nbsp;Daughter Helps Restore Historic North Carolina House.&nbsp;Pet Cremation Services Treat Animals Like Humans After Death.&nbsp;
